[package]
name = "two_d_game"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

[profile.dev]
opt-level=1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_asset_loader = "0.16.0"
bevy-inspector-egui = "0.18.3"
bevy_retro_ui = "0.1.0"
bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render-2d" ] }